mobile ui navbar alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -85,19 +85,6 @@ body {
   }
 }
 
-/*Media query for Navbar*/
-
-@media (max-width: 426px) {
-  .navbar {
-    width: 100%;
-    padding: 0px 32px;
-    background-color: rgba(247, 246, 255, 0.85);
-    border-radius: 16px 16px 0px 0px;
-    bottom: 0;
-    margin: 0;
-  }
-}
-
 /*Scrollbar*/
 
 ::-webkit-scrollbar {
@@ -116,4 +103,16 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+
+/*Media query for Navbar*/
+
+@media (max-width: 426px) {
+  .navbar {
+    width: 100%;
+    padding: 0 32px;
+    background-color: rgba(247, 246, 255, 0.85);
+    border-radius: 0px;
+    bottom: -28px;
+  }
 }
